remove java memory options